<resources>
    <string name="app_name">PokeKuy</string>

    <!-- Common -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>

    <!-- Auth -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_title">Login to PokeKuy</string>
    <string name="register_title">Create a PokeKuy Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account? Register here</string>
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="logout">Logout</string>

    <!-- Profile -->
    <string name="user_profile">User Profile</string>
    <string name="joined">Joined</string>
    <string name="error_loading_profile">Error loading profile. Please try again later.</string>

    <!-- Pokemon -->
    <string name="search_pokemon">Search Pokemon</string>
    <string name="abilities">Abilities</string>
    <string name="error_loading_pokemon">Error loading Pokemon list. Please try again later.</string>
    <string name="error_loading_pokemon_detail">Error loading Pokemon details. Please try again later.</string>
    <string name="error_searching_pokemon">Error searching Pokemon. Please try again later.</string>
    <string name="no_search_results">No Pokemon found matching your search query.</string>
</resources>